# blueapi_cli

./: .gitignore  Cargo.toml  README.md
src/: auth.rs  cli.rs  entities.rs  main.rs  messages.rs
src/messages/: data_model.rs
