[package]
name = "bcli"
version = "0.1.0"
edition = "2024"

[lints.clippy]
unwrap_used = "deny"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
reqwest = { version = "0.12.15", features = ["json"] }
rumqttc = "0.24.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["rt-multi-thread"] }
url = { version = "2.5.7", features = ["serde"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
